13: Split logic for Ingredient Creation into Application Layer

--- a/RB.Application/RB.Application.csproj
+++ b/RB.Application/RB.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RB.Core\RB.Core.csproj" />
+    <ProjectReference Include="..\RB.Infrastructure\RB.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
