--- a/RB.Tests/RB.Tests.csproj
+++ b/RB.Tests/RB.Tests.csproj
@@ -18,6 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RB.Application\RB.Application.csproj" />
+    <ProjectReference Include="..\RB.Core\RB.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
